[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/marioAnimacoes/Enemy/enemy.png" type="Texture" id=1]
[ext_resource path="res://Script/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Scenes/DamageEnemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sons/smw_stomp.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 152, 805, 20, 20 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 177, 805, 20, 20 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "enemyWalk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 7.77778
height = 0.0

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 1.8, 1.8 )
collision_layer = 2
collision_mask = 8
script = ExtResource( 2 )

[node name="AnimacaoEnemy" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "enemyWalk"
playing = true

[node name="ColisaoEnemy" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 14 )

[node name="Damage" parent="." instance=ExtResource( 3 )]
position = Vector2( -0.555556, -9.44444 )

[node name="DanoInimigo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 24.0

[connection signal="body_entered" from="Damage" to="." method="_on_Damage_body_entered"]
